  * Install test-udeb from .libs, to avoid installing the automake shell
    wrapper.
  * Fix transaction restarting in resolved to avoid async processing of
    free'd transactions.
    (Closes: #817210, LP: #1587727, #1587740, #1587762, #1587740)
  * Add "upstream" autopkgtest that runs the test/TEST* upstream integration
    tests in QEMU and nspawn.

  [ Michael Biebl ]
  * Add "systemctl daemon-reload" to lsb init-functions hook if the LoadState
    of a service is "not-found". This will run systemd-sysv-generator, so SysV
    init scripts that aren't installed by the package manager should be picked
    up automatically. (Closes: #825913)
  * automount: handle expire_tokens when the mount unit changes its state.
    (Closes: #826512)

  [ Felipe Sateler ]
  * Drop configure option --disable-compat-libs. It no longer exists.
  * Add policykit-1 to Suggests. It is used to allow unprivileged users to
    execute certain commands. (Closes: #827756)

 -- Martin Pitt <mpitt@debian.org>  Tue, 31 May 2016 13:16:21 +0200

systemd (230-2) unstable; urgency=medium

  [ Martin Pitt ]
  * Don't add a Breaks: against usb-modeswitch when building on Ubuntu; there
    it does not use hotplug.functions and is a lower version.
  * boot-and-services autopkgtest: Add missing xserver-xorg and
    lightdm-greeter test dependencies, so that lightdm can start.
    (See LP #1581106)
  * Re-disable logind's KillUserProcesses option by default. (Closes: #825394)

  [ Michael Biebl ]
  * Drop --disable-silent-rules from debian/rules. This is now handled by dh
    directly depending on whether the DH_QUIET environment variable is set.

 -- Martin Pitt <mpitt@debian.org>  Tue, 31 May 2016 12:02:14 +0200

systemd (230-1) unstable; urgency=medium

  [ Martin Pitt ]
  * New upstream release 230.
    - Fix rare assertion failure in hashmaps. (Closes: #816612)
    - Fix leaking scope units. (Closes: #805477)
    - Fix wrong socket ownership after daemon-reload. (LP: #1577001)