@@ -43,7 +43,6 @@ CONFFLAGS = \
 	--disable-qrencode \
 	--disable-libidn \
 	--disable-vconsole \
-	--disable-sysusers \
 	--disable-firstboot \
 	--disable-xkbcommon \
 	--disable-libiptc \
@@ -54,6 +53,7 @@ CONFFLAGS = \
 CONFFLAGS_deb = \
 	--enable-selinux \
 	--enable-hwdb \
+	--enable-sysusers \
 	--enable-efi \
 	PYTHON=python3
 
@@ -118,6 +118,7 @@ CONFFLAGS_udeb = \
 	--disable-efi \
 	--disable-gnuefi \
 	--disable-seccomp \
+	--disable-sysusers \
 	--without-python
 
 override_dh_auto_configure:
@@ -191,6 +192,9 @@ override_dh_install:
 	rm -rf debian/install/*/usr/share/factory/
 	# remove symlinks enabling default-on services
 	rm -rf debian/install/*/etc/systemd/system/*.target.wants/
+	# FIXME: generate proper sysusers.d/basic.conf for Debian, and add autopkgtest
+	rm -rf debian/install/*/usr/lib/sysusers.d/*
+	rm -f debian/install/*/lib/systemd/system/*sysusers*.service debian/install/*/lib/systemd/system/*/*sysusers*.service
 ifeq (, $(filter noudeb, $(DEB_BUILD_PROFILES)))
 	dh_install -pudev-udeb -plibudev1-udeb --sourcedir=debian/install/udeb
 endif
